--- a/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
@@ -11,9 +11,9 @@
             <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beggars.co/" data-via="beggarsdotco" data-text="">Tweet</a>
             <li>
                 <!-- Begin MailChimp Signup Form -->
-                <form action="http://beggars.us3.list-manage.com/subscribe/post?u=c49ff1b317db2e0a0c340e30f&amp;id=9fef3037a4" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <form action="//techcitysaysno.us8.list-manage.com/subscribe/post?u=34bdce3b92c82900259125046&amp;id=5641816eb1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                     <input type="email" value="" name="EMAIL" class="required email text" placeholder="Sign up for the newsletter" id="mce-EMAIL">
-                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_c49ff1b317db2e0a0c340e30f_9fef3037a4" value=""></div>
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_34bdce3b92c82900259125046_5641816eb1" value=""></div>
                     <input type="submit" value="Add" name="subscribe" id="mc-embedded-subscribe" class="submit">
                 </form>
             </li>
