--- a/src/TheCometCult/CommunityBundle/Resources/views/Home/index.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/Home/index.html.twig
@@ -12,13 +12,12 @@
                         <img src="https://graph.facebook.com/{{ member.fbId|e('html_attr') }}/picture?width=400&amp;height=400"/>
                     </figure>
                     <div class="description">
-                        <h3>{{ member.name }}, {{ member.age }}</h3>
+                        <h3>{{ member.name }},</h3>
                         <p class="job">{{ member.bio }}</p>
                         {% if member.websiteUrl %}
                         <p><a href="{{ member.websiteUrl }}">{{ member.websiteUrl }}</a></p>
                         {% endif %}
-                        <p>{{ member.occupancy }}</p>
-                        <p>From: {{ member.homeland }}</p>
+                        
                     </div>
                 </article>
             </li>
