--- a/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
@@ -1,4 +1,14 @@
 <div class="wrapper">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53263540-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
     <section class="additional">
         <ul>
             <li>This petition is powered by the incredible <a href="http://beggars.co">Beggars &amp; company,</a> forked &amp; redeployed with &hearts; by <a href="http://www.twitter.com/inthecompanyof">@inthecompanyof</a>.<p>
