--- a/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/footer.html.twig
@@ -17,8 +17,8 @@
     </section>
     <section class="meta">
         <ul>
-            <li><div class="fb-share-button" data-href="http://beggars.co/" data-type="button_count"></div></li>
-            <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://beggars.co/" data-via="beggarsdotco" data-text="">Tweet</a>
+            <li><div class="fb-share-button" data-href="http://techcitysaysno.com" data-type="button_count"></div></li>
+            <li><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://techcitysaysno.com" data-via="inthecompanyof" data-text="">Tweet</a>
             <li>
                 <!-- Begin MailChimp Signup Form -->
                 <form action="//techcitysaysno.us8.list-manage.com/subscribe/post?u=34bdce3b92c82900259125046&amp;id=5641816eb1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
