--- a/src/TheCometCult/CommunityBundle/Resources/views/Home/about.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/Home/about.html.twig
@@ -8,6 +8,8 @@
     <section>
         <h2>What are we saying no to now?!</h2>
 
+        <iframe src="//player.vimeo.com/video/101912507" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
         <p>The Bishopsgate Goodsyard is the last great undeveloped site in the heart of the original Shoreditch Tech City area. The site straddles both the boroughs of Hackney and Tower Hamlets and, apart from the temporary pop-up retail development of Boxpark, had remained dormant since the 1960’s. The site is classified by the London Borough of Hackney as commercial space and the council’s Site Allocations Document describes the site as a commercial location in a Priority Employment Area. It could not be clearer that this site is designated as an extremely important business location.</p>
  
 <p>The developers of the scheme are two companies called Hammerson and Ballymore who have formed a joint venture to ‘build out’ the site. They have produced a proposal which will be submitted for planning approval in late June. The proposal sets out a vision to create a mixed use development with residential and business properties co-located on the site. At its heart is a major residential development with two tower blocks 44 and 47 storeys in height providing 600 luxury flats. These two towers would dominate Shoreditch High Street and the surrounding areas, overshadowing the entire Shoreditch triangle with the shadow of the towers reaching all the way to the Old Street Roundabout.  At 47 storeys the tallest tower would be approximately 170m or 560ft in height.  That’s more than three times the height of Nelson’s Column which is a comparatively tiny 52m tall. </p>
