vimeo responsive add

--- a/src/TheCometCult/CommunityBundle/Resources/views/Home/about.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/Home/about.html.twig
@@ -8,7 +8,7 @@
     <section>
         <h2>What are we saying no to now?!</h2>
 
-        <iframe src="//player.vimeo.com/video/101912507" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+       <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://player.vimeo.com/video/101912507' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe></div>
 
         <p>The Bishopsgate Goodsyard is the last great undeveloped site in the heart of the original Shoreditch Tech City area. The site straddles both the boroughs of Hackney and Tower Hamlets and, apart from the temporary pop-up retail development of Boxpark, had remained dormant since the 1960’s. The site is classified by the London Borough of Hackney as commercial space and the council’s Site Allocations Document describes the site as a commercial location in a Priority Employment Area. It could not be clearer that this site is designated as an extremely important business location.</p>
  
