--- a/src/TheCometCult/CommunityBundle/Resources/views/header.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/header.html.twig
@@ -11,7 +11,7 @@
     <nav class="menu column">
         <ul class="pages">
             <li><a href="{{ path('the_comet_cult_community_about') }}">About</a></li>
-            <li><a href="mailto:benjamin@keeptechcityweird.com">Contact</a></li>
+            <li><a href="mailto:benjamin@techcity.io>Contact</a></li>
             
         </ul>
     </section>
