--- a/src/TheCometCult/CommunityBundle/Resources/views/layout.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/layout.html.twig
@@ -13,18 +13,18 @@
     <link rel="icon" href="favicon.ico">
 
     <meta property="og:image" content="{{ app.request.getSchemeAndHttpHost() ~ asset('bundles/thecometcultcommunity/images/facebook-sharer-image.jpg') }}">
-    <meta property="og:title" content="Beggars and Company">
-    <meta property="og:description" content="Romanian and Bulgarian citizens that impact your community in a positive way. Opportunists may call us nations of beggars and thieves, we are here to show a different side of the story.">
+    <meta property="og:title" content="Tech City Says No!">
+    <meta property="og:description" content="Standing up against the wrong sort of developers taking over east London">
     <meta property="og:site_name" content="Beggarsdotco">
     <meta property="og:url" content="http://www.beggars.co/">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="http://www.beggars.co/">
-    <meta name="twitter:title" content="Beggars and Company! Awesome Romanians and Bulgarians ">
-    <meta name="twitter:description" content="Awesome Romanians and Bulgarians from around the world.">
+    <meta name="twitter:url" content="http://www.techcitysaysno.com/">
+    <meta name="twitter:title" content="Tech City Says No! ">
+    <meta name="twitter:description" content="Standing up against the wrong sort of developers...">
     <meta name="twitter:image" content="{{ app.request.getSchemeAndHttpHost() ~ asset('bundles/thecometcultcommunity/images/twitter-sharer-image.jpg') }}">
-    <meta name="twitter:creator" content="@beggarsdotco">
+    <meta name="twitter:creator" content="@inthecompanyof>
 </head>
 <body class="{% if page_class %}{{ page_class }}{% endif %}">
     <header>
