--- a/src/TheCometCult/CommunityBundle/Resources/views/layout.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/layout.html.twig
@@ -15,14 +15,14 @@
     <meta property="og:image" content="{{ app.request.getSchemeAndHttpHost() ~ asset('bundles/thecometcultcommunity/images/facebook-sharer-image.jpg') }}">
     <meta property="og:title" content="Tech City Says No!">
     <meta property="og:description" content="Standing up against the wrong sort of developers taking over east London">
-    <meta property="og:site_name" content="Beggarsdotco">
-    <meta property="og:url" content="http://www.beggars.co/">
+    <meta property="og:site_name" content="http://savetechcity.herokuapp.com">
+    <meta property="og:url" content="http://savetechcity.herokuapp.com">
     <meta property="og:type" content="website">
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:url" content="http://www.techcitysaysno.com/">
+    <meta name="twitter:url" content="http://savetechcity.herokuapp.com">
     <meta name="twitter:title" content="Tech City Says No! ">
-    <meta name="twitter:description" content="Standing up against the wrong sort of developers...">
+    <meta name="twitter:description" content="Standing up against the wrong sort of developers in east london.">
     <meta name="twitter:image" content="{{ app.request.getSchemeAndHttpHost() ~ asset('bundles/thecometcultcommunity/images/twitter-sharer-image.jpg') }}">
     <meta name="twitter:creator" content="@inthecompanyof>
 </head>
