--- a/src/TheCometCult/CommunityBundle/Resources/views/Home/membersCounter.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/Home/membersCounter.html.twig
@@ -1,4 +1,4 @@
 <section class="description column">
     <h2>{{ membersNumber }}</h2>
-    <p> People who want to see people, put before property and profit.  <a href="{{ path('the_comet_cult_community_about') }}">Read more about this campaign.</a>.</p>
+    <p> who want a conversation about the future of our neighbourhood &amp; community.  <a href="{{ path('the_comet_cult_community_about') }}">Read more about this campaign.</a>.</p>
 </section>
