--- a/src/TheCometCult/CommunityBundle/Resources/views/header.html.twig
+++ b/src/TheCometCult/CommunityBundle/Resources/views/header.html.twig
@@ -12,6 +12,8 @@
         <ul class="pages">
             <li><a href="{{ path('the_comet_cult_community_about') }}">About</a></li>
             <li><a href="mailto:benjamin@techcity.io">Contact</a></li>
+            <li><a href="http://thegoodsyardlondon.co.uk/about">The current plans</a></li>
+            <li><a href="http://www.morelightmorepower.co.uk">The Campaign</a></li>
             
         </ul>
     </section>
